--- a/config/BUILD.bazel
+++ b/config/BUILD.bazel
@@ -46,6 +46,7 @@ compiler_module(
     visibility = [
         "//asmcomp:__subpackages__",
         "//bytecomp:__pkg__",
+        "//debugger:__pkg__",
         "//driver:__pkg__",
         "//file_formats:__pkg__",
         "//lambda:__pkg__",
