--- a/toolchain/adapter/BUILD.bazel
+++ b/toolchain/adapter/BUILD.bazel
@@ -2,6 +2,7 @@ exports_files(["BUILD.bazel"])
 
 load("//toolchain/adapter:BUILD.bzl", "toolchain_adapter")
 load("//toolchain/adapter:DEV_TOOLCHAIN.bzl", "dev_toolchain_adapter")
+load("//toolchain/adapter:tools_toolchain.bzl", "tools_toolchain_adapter")
 
 ## NB: these are all the same, but for debugging they need different
 ## names. Use aliases?
@@ -113,6 +114,10 @@ toolchain_adapter(
     linkopts    = ["-nostdlib"],
     # warnings  - use defaults
     # primitives  = "//runtime:primitives",
+)
+
+tools_toolchain_adapter(
+    name        = "cc",
 )
 
 toolchain_adapter(
