--- a/runtime/caml/BUILD.bazel
+++ b/runtime/caml/BUILD.bazel
@@ -1,28 +1,9 @@
 load("//vendor/mustach:BUILD_RULES.bzl", "mustache")
+load("//vendor/mustach:cc_mustache.bzl", "cc_mustache")
 
 exports_files(glob(["**"]))
 
-# filegroup(
-#     name = "hdr_srcs",
-#     srcs = glob(
-#         ["*.h"], exclude=["s.h", "opnames.h", "jumptbl.h"]
-#     ) + ["domain_state.tbl"],
-#     visibility = ["//runtime/caml/cross-compile:__pkg__"]
-# )
-
-# alias(
-#     name = "hdrs",
-#     actual = "//runtime/caml/cross-compile:hdrs",
-#     visibility = [
-#         "//boot:__pkg__",
-#         "//runtime:__pkg__",
-#         "//otherlibs/systhreads:__pkg__",
-#         "//otherlibs/unix:__pkg__",
-#         "//yacc:__pkg__"
-#     ],
-# )
-
-mustache(
+cc_mustache(
     name = "domain_state_h",
     out  = "domain_state.h",
     json = "domain_state.json",
@@ -34,16 +15,7 @@ mustache(
     ]
 )
 
-cc_library(
-    name = "dsh",
-    # srcs = [":domain_state.h"],
-    hdrs = [":domain_state_h"],
-    # include_prefix = "caml",
-    # strip_include_prefix = "caml",
-    visibility = ["//visibility:public"]
-)
-
-mustache(
+cc_mustache(
     name = "instruct_h",
     out  = "instruct.h",
     json = "//bytecomp:opcodes.json",
@@ -55,7 +27,7 @@ mustache(
     ]
 )
 
-mustache(
+cc_mustache(
     name = "fail_h",
     out  = "fail.h",
     json = "//runtime:primitives.json",
@@ -67,7 +39,7 @@ mustache(
     ]
 )
 
-mustache(
+cc_mustache(
     name = "jumptbl_h",
     out  = "jumptbl.h",
     json = "//bytecomp:opcodes.json",
@@ -78,7 +50,7 @@ mustache(
     ]
 )
 
-mustache(
+cc_mustache(
     name = "opnames_h",
     out  = "opnames.h",
     json = "//bytecomp:opcodes.json",
@@ -112,11 +84,11 @@ cc_library(
     hdrs = glob(
         ["*.h"]
     ) + [
-        ":domain_state.h",
-        ":fail.h",
-        ":instruct.h",
-        ":jumptbl.h",
-        ":opnames.h",
+        # ":domain_state.h",
+        # ":fail.h",
+        # ":instruct.h",
+        # ":jumptbl.h",
+        # ":opnames.h",
         ":s.h"
     ],
     # ] + select({
